[gd_scene load_steps=7 format=2]

[ext_resource path="res://jenga_prototype/ui_elements/prompts_gameplay/Arrow-tab.png" type="Texture" id=1]
[ext_resource path="res://jenga_prototype/ui_elements/PromptJenga.tscn" type="PackedScene" id=2]
[ext_resource path="res://jenga_prototype/ui_elements/prompts_gameplay/Command-tab.png" type="Texture" id=3]
[ext_resource path="res://jenga_prototype/ui_elements/prompts_gameplay/HideShowPromptButton.gd" type="Script" id=4]
[ext_resource path="res://jenga_prototype/ui_elements/prompts_gameplay/PromptsGameplay.gd" type="Script" id=5]
[ext_resource path="res://jenga_prototype/ui_elements/prompts_gameplay/Arrow-tab_clickmask1.png" type="BitMap" id=6]

[node name="PromptsGameplay" type="Control"]
margin_right = 689.0
margin_bottom = 104.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.0823529, 0.0745098, 0.360784, 0.6 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptLegendConfirmCancel" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.5
margin_top = -33.0
margin_right = 269.5
margin_bottom = 27.0

[node name="HideShowPromptButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -42.5
margin_right = -12.0
margin_bottom = 42.5
rect_pivot_offset = Vector2( 36, 42 )
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_click_mask = ExtResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="HideShowPromptButton" to="HideShowPromptButton" method="_on_HideShowPromptButton_mouse_entered"]
[connection signal="mouse_exited" from="HideShowPromptButton" to="HideShowPromptButton" method="_on_HideShowPromptButton_mouse_exited"]
[connection signal="toggled" from="HideShowPromptButton" to="HideShowPromptButton" method="_on_HideShowPromptButton_toggled"]
